# Foot_test_stand

./: ADC_Example.c  CLI.h  CMakeLists.txt  GPIOValveTest.c  README.md  gui.c  gui.h  main.c  newmain.c  newmain.h  state.c
include/: main.h  newmain.h  state.h
include/BBBIOlib/BBBio_lib/: BBBiolib.h  BBBiolib_PWMSS.c
include/BBBIOlib/overlay/: BBBIO-EHRPWM-00A0.dtbo  BBBIO-EHRPWM-00A0.dts  BBBIO-SPI1-00A0.dtbo
src/: ADC_Example.c  CLI.c  PWMTest.c  gui.c  newmain.c  state.c  testNoGUI.c
